---
source: src/processors/mod.rs
expression: diff
---
[
    Change {
        path: ".<anyOf:0>.0",
        change: FormatAdd {
            added: "uint8",
        },
    },
    Change {
        path: ".<anyOf:0>.2",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "group_first_seen",
        },
    },
    Change {
        path: ".<anyOf:0>.2.data.contexts.<anyOf:0>",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "flags",
        },
    },
    Change {
        path: ".<anyOf:0>.2.data.contexts.<anyOf:0>.trace.<anyOf:0>",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "parent_span_id",
        },
    },
    Change {
        path: ".<anyOf:0>.2.data.exception.<anyOf:0>.values.<anyOf:0>.?.<anyOf:0>.thread_id.<anyOf:0>.<anyOf:0>",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".<anyOf:0>.2.data.threads.<anyOf:0>.values.<anyOf:0>.?.<anyOf:0>.id.<anyOf:0>.<anyOf:0>",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".<anyOf:0>.2.event_id",
        change: FormatAdd {
            added: "uuid",
        },
    },
    Change {
        path: ".<anyOf:0>.2.group_id",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".<anyOf:0>.2.project_id",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".<anyOf:1>.0",
        change: TypeRemove {
            removed: Number,
        },
    },
    Change {
        path: ".<anyOf:1>.0",
        change: FormatAdd {
            added: "uint8",
        },
    },
    Change {
        path: ".<anyOf:1>.0",
        change: RangeAdd {
            added: Minimum(
                0.0,
            ),
        },
    },
    Change {
        path: ".<anyOf:1>.2.project_id",
        change: FormatAdd {
            added: "uint64",
        },
    },
]
